# OmniPos-BE

./: Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ✅feature-request.md  ❔question.md  🐞bug-.md
app/: main.py
app/api/: admin_router.py  kiosk_router.py  pos_router.py
