[tool.poetry]
name = "omnipos-be"
version = "0.1.0"
description = "POS 및 키오스크 시스템 백엔드"
authors = ["hyo00000 <gywkdk80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "0.115.8"
uvicorn = "0.34.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
pytest = "^8.3.4"
flake8 = "^7.1.1"
mypy = "^1.15.0"

[tool.black]
line-length = 150

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
